--- a/index.html
+++ b/index.html
@@ -12,34 +12,34 @@
 <body>
     <header class="header_block">
 
-        <div class="profile_photo_wrapper"> <img src="/src/assets/images/profile_photo.jpg"
+        <div class="profile_photo_wrapper"> <img src="/profile_photo.jpg"
                 class="header_profile_photo"> </div>
 
         <h2 class="subtitle profile_title">Антоненков Евгений</h2>
 
         <p class="header_subtitle_item">
-            <img class="logos" src="/src/assets/logos/telegram.svg">
+            <img class="logos" src="/telegram.svg">
             <a class="links" href="https://t.me/hello_worldddd" target="_blank">
                 @hello_worldddd
             </a>
         </p>
 
         <p class="header_subtitle_item">
-            <img class="logos" src="/src/assets/logos/phone.svg"> +7 950 682 57 16
+            <img class="logos" src="/phone.svg"> +7 950 682 57 16
         </p>
 
         <p class="header_subtitle_item">
-            <img class="logos" src="/src/assets/logos/github.svg">
+            <img class="logos" src="/github.svg">
             <a class="links" href="https://github.com/yazmeyaa" target="_blank">
                 gitgub.com/yazmeyaa
             </a>
         </p>
 
         <p class="header_subtitle_item"> </p>
-        <img class="logos" src="/src/assets/logos/calendar.svg"> 14.06.1998 (23 года)
+        <img class="logos" src="/calendar.svg"> 14.06.1998 (23 года)
         </p>
         <p class="header_subtitle_item">
-            <img class="logos" src="/src/assets/logos/geoposition.svg"> Великий Новгород
+            <img class="logos" src="/geoposition.svg"> Великий Новгород
         </p>
 
     </header>
