--- a/index.html
+++ b/index.html
@@ -18,28 +18,28 @@
         <h2 class="subtitle profile_title">Антоненков Евгений</h2>
 
         <p class="header_subtitle_item">
-            <img class="logos" src="/telegram.svg">
+            <img class="logos" src="/resume/telegram.svg">
             <a class="links" href="https://t.me/hello_worldddd" target="_blank">
                 @hello_worldddd
             </a>
         </p>
 
         <p class="header_subtitle_item">
-            <img class="logos" src="/phone.svg"> +7 950 682 57 16
+            <img class="logos" src="/resume/phone.svg"> +7 950 682 57 16
         </p>
 
         <p class="header_subtitle_item">
-            <img class="logos" src="/github.svg">
+            <img class="logos" src="/resume/github.svg">
             <a class="links" href="https://github.com/yazmeyaa" target="_blank">
                 gitgub.com/yazmeyaa
             </a>
         </p>
 
         <p class="header_subtitle_item"> </p>
-        <img class="logos" src="/calendar.svg"> 14.06.1998 (23 года)
+        <img class="logos" src="/resume/calendar.svg"> 14.06.1998 (23 года)
         </p>
         <p class="header_subtitle_item">
-            <img class="logos" src="/geoposition.svg"> Великий Новгород
+            <img class="logos" src="/resume/geoposition.svg"> Великий Новгород
         </p>
 
     </header>
