--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="header_block">
 
-        <div class="profile_photo_wrapper"> <img src="/profile_photo.jpg"
+        <div class="profile_photo_wrapper"> <img src="/resume/profile_photo.jpg"
                 class="header_profile_photo"> </div>
 
         <h2 class="subtitle profile_title">Антоненков Евгений</h2>
