--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     развиваться· Хочется работать над проектом, который будет полезен людям, хочется решать не самые
                     тривиальные задачи.</span></li>
             <li> <span>Мотивация расти, как специалист и создавать крутые продукты.</span> </li>
-            <li>В свободное время обычно практикуюсь в разработке. Люблю видеоигры.</li>
+            <li>В свободное время обычно практикуюсь в разработке.</li>
         </ul>
 
     </section>
