--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </a>
         </p>
 
-        <p class="header_subtitle_item"> </p>
+        <p class="header_subtitle_item">
         <img class="logos" src="/resume/calendar.svg"> 14.06.1998 (23 года)
         </p>
         <p class="header_subtitle_item">
