--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 <body>
     <header class="header_block">
 
-        <div class="profile_photo_wrapper"> <img src="/resume/profile_photo.jpg"
-                class="header_profile_photo"> </div>
+        <div class="profile_photo_wrapper"> <img src="/resume/profile_photo.jpg" class="header_profile_photo"> </div>
 
         <h2 class="subtitle profile_title">Антоненков Евгений</h2>
 
@@ -36,7 +35,7 @@
         </p>
 
         <p class="header_subtitle_item">
-        <img class="logos" src="/resume/calendar.svg"> 14.06.1998 (23 года)
+            <img class="logos" src="/resume/calendar.svg"> 14.06.1998 (23 года)
         </p>
         <p class="header_subtitle_item">
             <img class="logos" src="/resume/geoposition.svg"> Великий Новгород
@@ -79,10 +78,10 @@
         <h2 class="subtitle">Немного о себе:</h2>
         <ul>
             <li><span>Хотелось бы работать в сильной команде, в которой можно подчерпнуть интересные идеи и
-                    развиваться· Хочется работать над проектом, который будет полезен людям, хочется решать не самые
+                    развиваться· Хочется работать над проектом, который будет полезен людям решать не самые
                     тривиальные задачи.</span></li>
             <li> <span>Мотивация расти, как специалист и создавать крутые продукты.</span> </li>
-            <li>В свободное время обычно практикуюсь в разработке.</li>
+            <li> <span> В свободное время обычно практикуюсь в разработке. </span> </li>
         </ul>
 
     </section>
