--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
 
         <h2 class="subtitle">Опыт разработки:</h2>
         <div class="projects">
-            
+
         </div>
 
         <h2 class="subtitle">Немного о себе:</h2>
         <ul>
             <li><span>Хотелось бы работать в сильной команде, в которой можно подчерпнуть интересные идеи и
-                    развиваться· Хочется работать над проектом, который будет полезен людям, решать не самые
+                    развиваться. Хочется работать над проектом, который будет полезен людям, решать не самые
                     тривиальные задачи.</span></li>
             <li> <span>Есть мотивация расти как специалист и создавать крутые продукты.</span> </li>
             <li> <span> В свободное время обычно практикуюсь в разработке. </span> </li>
