--- a/index.html
+++ b/index.html
@@ -13,33 +13,33 @@
 <body>
     <header class="header_block">
 
-        <div class="profile_photo_wrapper"> <img src="/resume/profile_photo.jpg" class="header_profile_photo"> </div>
+        <div class="profile_photo_wrapper"> <img src="/resume/src/assets/images/profile_photo.jpg" class="header_profile_photo"> </div>
 
         <h2 class="subtitle profile_title">Антоненков Евгений</h2>
 
         <p class="header_subtitle_item">
-            <img class="logos" src="/resume/src/assets/images/telegram.svg">
+            <img class="logos" src="/resume/src/assets/logos/telegram.svg">
             <a class="links" href="https://t.me/hello_worldddd" target="_blank">
                 @hello_worldddd
             </a>
         </p>
 
         <p class="header_subtitle_item">
-            <img class="logos" src="/resume/src/assets/images/phone.svg"> +7 950 682 57 16
+            <img class="logos" src="/resume/src/assets/logos/phone.svg"> +7 950 682 57 16
         </p>
 
         <p class="header_subtitle_item">
-            <img class="logos" src="/resume/src/assets/images/github.svg">
+            <img class="logos" src="/resume/src/assets/logos/github.svg">
             <a class="links" href="https://github.com/yazmeyaa" target="_blank">
                 gitgub.com/yazmeyaa
             </a>
         </p>
 
         <p class="header_subtitle_item">
-            <img class="logos" src="/resume/src/assets/images/calendar.svg"> 14.06.1998 (23 года)
+            <img class="logos" src="/resume/src/assets/logos/calendar.svg"> 14.06.1998 (23 года)
         </p>
         <p class="header_subtitle_item">
-            <img class="logos" src="/resume/src/assets/images/geoposition.svg"> Великий Новгород
+            <img class="logos" src="/resume/src/assets/logos/geoposition.svg"> Великий Новгород
         </p>
 
     </header>
