--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
         <div class="developement_experience">
             <h2 class="subtitle">Опыт разработки:</h2>
             <div class="projects">
+
                 <div class="signle_project">
                     <h3 class="single_project_title">Таймер с отсчётом до Нового года</h3>
                     <img class="single_project_screenshot" src="/resume/src/assets/images/snowFlakeScreenshot.png" alt="Скриншот приложения" >
@@ -86,6 +87,15 @@
                     <a class="single_project_links" href="https://github.com/yazmeyaa/snowFlake" target="_blank">Github</a>
                     <a class="single_project_links" href="https://yazmeyaa.github.io/snowFlake/" target="_blank" >Github Pages</a>
                 </div>
+
+                <div class="signle_project">
+                    <h3 class="single_project_title">Музыкальный плеер</h3>
+                    <img class="single_project_screenshot" src="/resume/src/assets/images/musicPlayerScreenshot.png" alt="Скриншот приложения" >
+                    <p class="single_project_descriptio" > Приложение для прослушивания музыки. На данный момент находится в разработке. Используемый стек технологий: TypeScript, React, styled-components, Redux, redux-thunk.</p> 
+                    <a class="single_project_links" href="https://github.com/yazmeyaa/Music_Player/" target="_blank">Github</a>
+                    <a class="single_project_links" href="https://yazmeyaa.github.io/Music_Player/" target="_blank" >Github Pages</a>
+                </div>
+
             </div>
         </div>
 
