--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </p>
 
         <p class="header_subtitle_item">
-            <img class="logos" src="/resume/src/assets/logos/phone.svg"> +7 950 682 57 16
+            <a href="tel:+7-950-682-57-16"><img class="logos" src="/resume/src/assets/logos/phone.svg"> +7(950)682-57-16</a>
         </p>
 
         <p class="header_subtitle_item">
