--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <body>
     <header class="header_block">
 
-        <div class="profile_photo_wrapper"> <img src="/resume/src/assets/images/profile_photo.jpg" class="header_profile_photo"> </div>
+        <div class="profile_photo_wrapper"> <img src="/resume/src/assets/images/profile_photo.jpg"
+                class="header_profile_photo"> </div>
 
         <h2 class="subtitle profile_title">Антоненков Евгений</h2>
 
@@ -25,7 +26,7 @@
         </p>
 
         <p class="header_subtitle_item">
-            <a class="links" href="tel:+7-950-682-57-16"><img class="logos" src="/resume/src/assets/logos/phone.svg"> +7(950)682-57-16</a>
+            <img class="logos" src="/resume/src/assets/logos/phone.svg">  <a class="links" href="tel:+7-950-682-57-16">+7(950)682-57-16</a>
         </p>
 
         <p class="header_subtitle_item">
@@ -82,18 +83,27 @@
 
                 <div class="signle_project">
                     <h3 class="single_project_title">Таймер с отсчётом до Нового года</h3>
-                    <img class="single_project_screenshot" src="/resume/src/assets/images/snowFlakeScreenshot.png" alt="Скриншот приложения" >
-                    <p class="single_project_descriptio" > Моё самое первое приложение на JavaScript. В нём я довольно неплохо отточил базовые знания JS.</p> 
-                    <a class="single_project_links" href="https://github.com/yazmeyaa/snowFlake" target="_blank">Github</a>
-                    <a class="single_project_links" href="https://yazmeyaa.github.io/snowFlake/" target="_blank" >Github Pages</a>
+                    <img class="single_project_screenshot" src="/resume/src/assets/images/snowFlakeScreenshot.png"
+                        alt="Скриншот приложения">
+                    <p class="single_project_descriptio"> Моё самое первое приложение на JavaScript. В нём я довольно
+                        неплохо отточил базовые знания JS.</p>
+                    <a class="single_project_links" href="https://github.com/yazmeyaa/snowFlake"
+                        target="_blank">Github</a>
+                    <a class="single_project_links" href="https://yazmeyaa.github.io/snowFlake/" target="_blank">Github
+                        Pages</a>
                 </div>
 
                 <div class="signle_project">
                     <h3 class="single_project_title">Музыкальный плеер</h3>
-                    <img class="single_project_screenshot" src="/resume/src/assets/images/musicPlayerScreenshot.png" alt="Скриншот приложения" >
-                    <p class="single_project_descriptio" > Приложение для прослушивания музыки. На данный момент находится в разработке. Используемый стек технологий: TypeScript, React, styled-components, Redux, redux-thunk.</p> 
-                    <a class="single_project_links" href="https://github.com/yazmeyaa/Music_Player/" target="_blank">Github</a>
-                    <a class="single_project_links" href="https://yazmeyaa.github.io/Music_Player/" target="_blank" >Github Pages</a>
+                    <img class="single_project_screenshot" src="/resume/src/assets/images/musicPlayerScreenshot.png"
+                        alt="Скриншот приложения">
+                    <p class="single_project_descriptio"> Приложение для прослушивания музыки. На данный момент
+                        находится в разработке. Используемый стек технологий: TypeScript, React, styled-components,
+                        Redux, redux-thunk.</p>
+                    <a class="single_project_links" href="https://github.com/yazmeyaa/Music_Player/"
+                        target="_blank">Github</a>
+                    <a class="single_project_links" href="https://yazmeyaa.github.io/Music_Player/"
+                        target="_blank">Github Pages</a>
                 </div>
 
             </div>
