Added experience Updadet image of music player

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
         </p>
 
         <p class="header_subtitle_item">
-            <img class="logos" src="/resume/src/assets/logos/phone.svg">  <a class="links" href="tel:+7-950-682-57-16">+7(950)682-57-16</a>
+            <img class="logos" src="/resume/src/assets/logos/phone.svg"> <a class="links"
+                href="tel:+7-950-682-57-16">+7(950)682-57-16</a>
         </p>
 
         <p class="header_subtitle_item">
@@ -40,8 +41,13 @@
         <p class="header_subtitle_item">
             <img class="logos" src="/resume/src/assets/logos/calendar.svg"> 14.06.1998 (23 года)
         </p>
+
         <p class="header_subtitle_item">
             <img class="logos" src="/resume/src/assets/logos/geoposition.svg"> Великий Новгород
+        </p>
+
+        <p class="header_subtitle_item">
+            <img class="logos" src="/resume/src/assets/logos/experience.png"> 1 год опыт разработки
         </p>
 
     </header>
@@ -52,7 +58,7 @@
         <div class="my_conditions">
             <h2 class="subtitle"> Желаемые условия: </h2>
             <ul class="conditions_list">
-                <li>З/П: <span class="condition_item">80 000 руб.</span> </li>
+                <li>З/П: <span class="condition_item">60 000 руб.</span> </li>
                 <li>Занятость: <span class="condition_item">полная</span> </li>
                 <li>Место работы: <span class="condition_item">удалённо</span> <span class="condition_item">офис г.
                         Великий
